
  * New upstream release.
    - Compiz: make it sibling of the parent toplevel window (LP: #728412)
    - Rendering error on multiple monitors (LP: #736992)
    - overlay scrollbar thumbs not hidden if different window has 
      focus (LP: #743229)
    - Scrollbar stays on top after closing window (LP: #744431)
    - use proper allocation, not from the parent (LP: #741885)

 -- Ken VanDine <ken.vandine@canonical.com>  Wed, 30 Mar 2011 14:29:24 -0400

overlay-scrollbar (0.1.4-0ubuntu2) natty; urgency=low

  * debian/control
    - Bump the depends for gtk to >= 2.24.3-0ubuntu4+overlayscrollbar1 

 -- Ken VanDine <ken.vandine@canonical.com>  Mon, 28 Mar 2011 10:06:17 -0400

overlay-scrollbar (0.1.4-0ubuntu1) natty; urgency=low

  * New upstream release.
    - Add whitelist support (LP: #740276)
    - Improve scrolling speed (LP: #728418)
    - Scrollbars are not working with wxWidgets (LP: #731369)
    - blacklist RTL languages (LP: #741071)
    - stop events when the thumb is unmapped (LP: #737627)

 -- Ken VanDine <ken.vandine@canonical.com>  Wed, 23 Mar 2011 16:05:07 -0400

overlay-scrollbar (0.1.3-0ubuntu2) natty; urgency=low

  * Merged in grab fixes from trunk r169

 -- Ken VanDine <ken.vandine@canonical.com>  Fri, 18 Mar 2011 13:47:09 -0400

overlay-scrollbar (0.1.3-0ubuntu1) natty; urgency=low

  * New upstream release.
    - Performance improvements
    - Scrollbar (thumb) is not working in modal dialogs (LP: #728664)
    - unity's restore from maximize is breaking the positioning of 
      overlay (LP: #732091)
    - with jjardon's performance tweak branch, sometimes the pager is 
      not (LP: #735618)
    - You can scroll even if the thumb is not shown (LP: #735906)
    - rendering issues for the pager (LP: #736076)
    - Issues when reallocating widgets (LP: #733031)
    - The thumb has black borders after switching back to metacity (LP: #736280)
    - scrollbar should be shifted depending on the scrolled 
      window's (LP: #733212)
