@@ -1,1 +1,2 @@
 usr/lib/lib*.so.*
+debian/ayatana-scrollbar.py /usr/share/apport/general-hooks/
