@@ -7,6 +7,8 @@ overlay-scrollbar (0.1.5-0ubuntu1) UNRELEASED; urgency=low
       focus (LP: #743229)
     - Scrollbar stays on top after closing window (LP: #744431)
     - use proper allocation, not from the parent (LP: #741885)
+  * debian/ayatana-scrollbar.py
+    - Added apport hook (LP: #740278)
 
  -- Ken VanDine <ken.vandine@canonical.com>  Wed, 30 Mar 2011 14:29:24 -0400
 
